# cloudrun-example

./: .gcloudignore  .gitignore  GEMINI.md  LICENSE  README.md  TODO.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.specify/memory/: constitution.md
iac/: .gitignore  cdktf.json  main.py  pyproject.toml  requirements.txt  validate.sh
scripts/: setup_gcp_cd.sh  sync-deps.sh
specs/001-iac-terraform-cdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-iac-terraform-cdk/checklists/: requirements.md
tests/: test_app.py
