[project]
name = "cloudrun-example"
version = "0.1.0"
dependencies = [
    "flask~=2.3.2",
    "gunicorn~=21.2.0",
]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Basic ruff configuration used by CI and local linting
line-length = 88
exclude = [".venv", "build", "dist", "__pycache__"]
select = ["E", "F", "W", "C90", "B", "RUF"]

# Optional/dev dependencies for local development (used by uv)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.12.0",
]
